Fix: fix skills section overflow

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -85,6 +85,7 @@ main h3 {
   justify-content: flex-start;
   gap: 20px;
   font-weight: 500;
+  flex-wrap: wrap;
 }
 .skills li {
   display: block;
